testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment25.errors.txt
bug24703.js(7,8): error TS2506: 'O' is referenced directly or indirectly in its own base expression.


==== bug24703.js (1 errors) ====
    var Common = {};
    Common.I = class {
        constructor() {
            this.i = 1
        }
    }
    Common.O = class extends Common.I {
           ~
!!! error TS2506: 'O' is referenced directly or indirectly in its own base expression.
        constructor() {
            super()
            this.o = 2
        }
    }
    var o = new Common.O()
    var i = new Common.I()
    o.i
    o.o
    i.i
    
    